<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/c_movie">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
            android:id="@+id/r_itemNowPlay">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:scaleType="centerCrop"
                android:id="@+id/imgItem"
                tools:src="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/tv_itemName"
                android:layout_toRightOf="@id/imgItem"
                android:layout_toEndOf="@id/imgItem"
                tools:text="@string/title_movie"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:layout_below="@id/tv_itemName"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/imgItem"
                android:layout_toRightOf="@+id/imgItem"
                android:id="@+id/tv_itemOverview"
                tools:text="@string/overview"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_toRightOf="@id/imgItem"
                android:id="@+id/tv_dateRelease"
                android:layout_alignParentBottom="true"
                tools:text="@string/dateRelease"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/ly_button"
                android:id="@+id/btn_favorite"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/ly_button"
                android:id="@+id/btn_share"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>