<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rvItemMov"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/imgPos"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        tools:src="@mipmap/ic_launcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17sp"
        tools:text="@string/title_movie"
        android:layout_toRightOf="@+id/imgPos"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="16sp"
        tools:text="@string/description"
        android:layout_toRightOf="@+id/imgPos"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="5dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dateRelease"
        android:layout_toRightOf="@+id/imgPos"
        android:layout_below="@+id/tvDeskripsi"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="5dp" />
</RelativeLayout>