<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.example.diyahmmt.mcatalogueuiux.search.DetailMovActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:padding="10dp"
            android:src="@drawable/ic_android_black_24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titledet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="17sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/detDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:drawablePadding="2dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/detOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hOverView"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="2dp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/detailRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hRatings"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
